@@ -117,7 +117,8 @@ Current development version: 3.30-09 (2020-04-28)
 - 09: Bugfix #862/3: Batch import produced defective arrangement lists <2>
 - 09: Bugfix #863/1: Duplicate routines on PapDesigner/StrukTex export <2>
 - 09: Bugfix #863/2: Wrong assignment symbols in CALLs on PapDesigner export <2>
-- 09: Issue #864: Parameter lists had to be transformed for PapDesigner export <2>
+- 09: Issue #864: Parameter list transformation for PapDesigner export <2>
+- 09: Bugfix #865: Flaw in parameter recognition on subroutine generation <2>
 
 Version: 3.30 (2019-10-06)
 - 01: Issue #657: Spanish message in German locale replaced <2>
